<resources>
    <string name="app_name">CabiCat</string>
    <string name="title_home">Home</string>
    <string name="title_normallayer">Normal Layer</string>
    <string name="title_secretlayer">Secret Layer</string>

    // string for fileitem adapter
    <string name="fileitem_adapterunit_normallayer_remove">Remove</string>
    <string name="fileitem_adapterunit_normallayer_delete">Delete</string>
    <string name="fileitem_adapterunit_normallayer_transfer">Transfer to secret layer</string>
    <string name="fileitem_adapterunit_secretlayer_remove">Remove</string>
    <string name="fileitem_adapterunit_secretlayer_delete">Delete</string>
    <string name="fileitem_adapterunit_secretlayer_transfer">Transfer to normal layer </string>

    // string for welcome page
    <string name="welcomepage_text">Welcome to Cabicat</string>


    <!--    // string for home fragment-->
    <!--    <string name="home_latestfiles">Latest Files</string>-->
    <!--    <string name="home_recentfiles">Recently Viewed</string>-->
    <string name="home_import">Import to Cabicat</string>
    <string name="home_changepwd">Change password</string>
    // string for dialog
    <string name="dialog_label_text">Enter your password</string>

    // string for register
    <string name="register_name_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_button">Register</string>

    // string for change pwd
    <string name="changepwd_name_hint">Username</string>
    <string name="changepwd_cpassword_hint">Current Password</string>
    <string name="changepwd_npassword_hint">New Password</string>
    <string name="changepwd_apply_btn">Apply</string>

    // string for about
    <string name="about_name">Cabicat</string>
    <string name="about_introduce">a light-weight file manage system</string>
    <string name="about_team_name">Team StarDust</string>
    <string name="about_studentname">Yiheng Dai\nSida Huang\nJiamin Chen\nZheng Wu</string>
    <string name="about_studentid">1611453\n1612359\n1613449\n1613261</string>
    <string name="about_githubname">GitHub</string>
    <string name="about_githublink">https://github.com/Taku-firi/Cabicat</string>
    <string name="about_Copyright_Declaration">Copyright Declaration</string>
    <string name="about_copyright1">Copyright [2019] [CSE311 Team Stardust]</string>
    <string name="about_copyright2">Licensed under the Apache License, Version 2.0 (the "License");</string>
    <string name="about_copyright3">you may not use this file except in compliance with the License.</string>
    <string name="about_copyright4">You may obtain a copy of the License at</string>
    <string name="about_copyright5">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about_copyright6">Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="home_about">About</string>
    <string name="about_open_sourcelicense">https://github.com/CymChad/BaseRecyclerViewAdapterHelper</string>
    <string name="about_open_sourcelicense2">https://github.com/anzaizai/EasySwipeMenuLayout</string>
    <string name="about_open_sourcelicense_name">Open Source Licenses</string>
    <string name="about_open_source_license1_name">BRVAH Apache 2.0</string>
    <string name="about_open_source_license2_name">EasySwipeMenuLayout Apache 2.0</string>
    <string name="about_license">Apache 2.0\nApache 2.0</string>
    <string name="about_library">BRVAH\nEasySwipeMenuLayout</string>


</resources>
